--- a/hackage-api.cabal
+++ b/hackage-api.cabal
@@ -1,31 +1,28 @@
-cabal-version: 3.0
-name:          hackage-api
-version:       0.1.0
-
--- synopsis:
--- description:
--- category:
-license:       BSD-3-Clause
-license-file:  LICENSE
-author:        Poscat
-maintainer:    Poscat <poscat@mail.poscat.moe>
-copyright:     Copyright (c) Poscat 2021
-stability:     alpha
-homepage:      https://github.com/poscat0x04/hackage-api
-bug-reports:   https://github.com/poscat0x04/hackage-api/issues
+cabal-version:   3.0
+name:            hackage-api
+version:         0.1.0
+synopsis:        An API binding to Hackage API
+description:     An (partial) API binding to Hackage API
+category:        Distribution
+license:         BSD-3-Clause
+license-file:    LICENSE
+author:          Poscat
+maintainer:      Poscat <poscat@mail.poscat.moe>
+copyright:       Copyright (c) Poscat 2021
+stability:       alpha
+homepage:        https://github.com/poscat0x04/hackage-api
+bug-reports:     https://github.com/poscat0x04/hackage-api/issues
 extra-doc-files:
-  README.md
   CHANGELOG.md
+  README.md
 
 common common-attrs
   build-depends:
-    , base        >=4.10 && <5
-    , aeson
-    , Cabal
-    , servant
+    , base             >=4.10 && <5
+    , http-client-tls
     , servant-client
 
-  default-language:  Haskell2010
+  default-language:   Haskell2010
   default-extensions:
     NoStarIsType
     BangPatterns
@@ -35,6 +32,7 @@ common common-attrs
     DeriveFunctor
     DeriveGeneric
     DeriveTraversable
+    DuplicateRecordFields
     EmptyCase
     FlexibleContexts
     FlexibleInstances
@@ -47,7 +45,6 @@ common common-attrs
     PartialTypeSignatures
     PatternSynonyms
     RecordWildCards
-    DuplicateRecordFields
     ScopedTypeVariables
     TupleSections
     TypeApplications
@@ -59,20 +56,29 @@ common common-attrs
 library
   import:          common-attrs
   build-depends:
+    , aeson
+    , bytestring
+    , Cabal
+    , http-client
+    , http-media
+    , servant
+    , servant-client-core
+    , text
+    , time
 
   exposed-modules:
+    Distribution.Hackage.API
+    Distribution.Hackage.Types
 
   other-modules:
   hs-source-dirs:  src
 
 test-suite hackage-api-test
-  import:          common-attrs
-  type:            exitcode-stdio-1.0
-  build-depends:
-    , hackage-api
-
-  hs-source-dirs:  test
-  main-is:         Spec.hs
+  import:         common-attrs
+  type:           exitcode-stdio-1.0
+  build-depends:  hackage-api
+  hs-source-dirs: test
+  main-is:        Spec.hs
 
 source-repository head
   type:     git
